# quid

./: .gitignore  CLAUDE-CODE-CHECKLIST.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
agent/: .env.example  package-lock.json  package.json
agent/src/: approve.ts  casper.ts  config.ts  decision.ts  demo.ts  index.ts  plaid-sandbox.ts  plaid.ts  probe-cashflow.ts  seed.ts  server.ts  types.ts  x402.ts
api/: _casper.ts  _lib.ts  health.ts  users.ts
api/casper/: activity.ts
api/offramp/: payout.ts
api/plaid/: exchange.ts  link-token.ts  transactions.ts
api/stripe/: checkout.ts  webhook.ts
contracts/: Cargo.toml  DEPLOY.md  Odra.toml  rust-toolchain.toml
contracts/src/: lib.rs
docs/: Quid-demo-script.md  Quid-frontend-brief.md  Quid-product-and-stack.md  Quid-project-brief.md  Quid-submission.md  Quid-user-flows.md  Quid-wiselending-sketch.md  website-prompt.md
site/: .gitignore  README.md  index.html  package-lock.json  package.json
site/api/: waitlist.ts
site/public/: demo.html
site/src/: App.tsx  index.css
site/src/components/: Agent.tsx  Faq.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Phone.tsx  Pricing.tsx  Reveal.tsx  TrustRow.tsx  Waitlist.tsx
web/: .env.example  INTEGRATIONS.md  README.md  index.html  package-lock.json  package.json  quid-mockup.html  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.tsx  index.css  state.tsx
web/src/components/: AdvanceSheet.tsx  Shell.tsx  Slider.tsx  ui.tsx
web/src/lib/: api.ts  cn.ts  image.ts  integrations.ts  ramps.ts
web/src/screens/: Activity.tsx  AdvanceFlow.tsx  CashOut.tsx  Home.tsx  Onboarding.tsx  Outcomes.tsx  Profile.tsx  Wallet.tsx
